# sdijofsodi

client/: index.html  package-lock.json  package.json
client/src/: App.tsx  api_client.tsx  main.tsx  style.css  types.ts
client/src/components/: AddStudentForm.tsx  Analytics.tsx  AverageExamMarksGraph.tsx  CreateExam.tsx  CreateExamSidebar.tsx  CreateQuestion.tsx  DashboardCard.tsx  ExamCard.tsx  ExamResults.tsx  Header.tsx  Layout.tsx  Login.tsx  MyExams.tsx  PreviousExams.tsx  Register.tsx  Results.tsx  Sidebar.tsx  Students.tsx  SubmissionDetails.tsx  TakeExam.tsx  TeacherMainMenu.tsx  UpcomingExams.tsx  UserDashboard.tsx  UserSidebarNavigation.tsx  ViewExam.tsx  WebCamPreviewComp.tsx  WebCamWarning.tsx
client/src/layout/: TeacherDashboardLayout.tsx  UserDashboardLayout.tsx
client/src/pages/: BaseLogin.tsx  BaseRegister.tsx  Exam.tsx  ExamSubmissionPage.tsx  Login.tsx  MyExams.tsx  Profile.tsx  Register.tsx  Results.tsx  StudentExams.tsx  StudentsPage.tsx  TeacherDashboard.tsx  ThankYouPage.tsx  User.tsx
client/src/services/: api.ts  examService.ts  userService.ts
server/: README.md  alembic.ini  examination.db  main.py  pyproject.toml
server/app/: api.py  config.py
server/app/auth/: api.py  auth.py
server/app/database/: db.py
server/app/exams/: api.py  models.py  schemas.py
server/app/faculty/: api.py  schemas.py
server/app/users/: api.py  models.py  schemas.py
server/scripts/: env.py
server/scripts/versions/: create_exam_tables.py
